'*' wildcard in the 'Src IP' or 'Dest IP' field of the ESP SA dialog does not work
This issue was migrated from bug 7866 in our old bug tracker.
Original bug information:
Reporter: Matthias St. Pierre
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Ubuntu
Platform: x86
Version: 1.8.3
Attachments:
packet-ipsec.patch: Patch for packet-ipsec.c
testcase.tgz: Test case
esp_sa: EAP_SA
ikev2_decryption_table: Decryption table
wireshark.pcap: Test trace
rfc4868.patch: Patch for packet-isakmp.c and packet-ipsec.c (rfc4868 support)