From "msp": '*' wildcard in the 'Src IP' or 'Dest IP' field of the ESP SA dialog does not work

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=7866

svn path=/trunk/; revision=45585